objects/SubbareddyCopado__c.object
<CustomObject>
    <fields>
        <fullName>Text1Copadokmpl__c</fullName>
        <label>Text1Copadokmpl</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2Copadokmpl__c</fullName>
        <label>Text2Copadokmpl</label>
        <length>46</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text3Copadokmpl__c</fullName>
        <label>Text3Copadokmpl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>